--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ minecraft_version=1.21.1
 minecraft_version_range=[1.21.1]
 neo_version=21.1.203
 loader_version_range=[1,)
+geckolib_version=4.7.6
+curios_version=9.5.1+1.21.1
 
 ## Mod Properties
 
